--- a/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REPO_URL: https://github.com/breeze303/ipq60xx-6.6.git
-  REPO_BRANCH: main
+  REPO_BRANCH: main-nss
   CONFIG_FILE: configs/ipq60xx-6.6-wifi(emmc).config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
