--- a/configs/ipq60xx-6.6-wifi(emmc).config
+++ b/configs/ipq60xx-6.6-wifi(emmc).config
@@ -163,7 +163,7 @@ CONFIG_EXTERNAL_CPIO=""
 #
 # Root filesystem images
 #
-CONFIG_TARGET_ROOTFS_EXT4FS=y
+#CONFIG_TARGET_ROOTFS_EXT4FS=y
 CONFIG_TARGET_EXT4_RESERVED_PCT=0
 CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
 # CONFIG_TARGET_EXT4_BLOCKSIZE_2K is not set
