--- a/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
@@ -95,6 +95,9 @@ jobs:
         cd $OPENWRT_PATH
         make download -j8
         find dl -size -1024c -exec rm -f {} \;
+    - name: SSH connection to Actions (Tmate)
+      uses: mxschmitt/action-tmate@v3
+      timeout-minutes: 30 # Tự động ngắt sau 30p nếu bạn quên không tắt để tránh tốn phút của Github
 
     - name: Compile Firmware
       id: compile
