--- a/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
@@ -60,8 +60,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
-- name: Clone Source Code
+    - name: Clone Source Code
       run: |
+        df -hT $GITHUB_WORKSPACE
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         echo "OPENWRT_PATH=$PWD" >> $GITHUB_ENV
@@ -77,27 +78,17 @@ jobs:
     - name: Load Custom Configuration
       run: |
         [ -e files ] && mv files $OPENWRT_PATH/files
+        # Chép file config vào
         cp $CONFIG_FILE $OPENWRT_PATH/.config
         cd $OPENWRT_PATH
         
-        # ÉP CHỌN DEVICE VÀ TẮT EXT4
+        # ÉP CHỌN DEVICE VÀ TẮT EXT4 TRƯỚC KHI DEFCONFIG
         sed -i 's/CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_8devices_mango-dvk=y/# CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_8devices_mango-dvk is not set/' .config
         sed -i 's/# CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_jdc_ax1800-pro is not set/CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_jdc_ax1800-pro=y/' .config
         sed -i 's/CONFIG_TARGET_ROOTFS_EXT4FS=y/# CONFIG_TARGET_ROOTFS_EXT4FS is not set/' .config
         
+        # Chạy defconfig SAU KHI đã có Feeds và đã ép config
         make defconfig
-
-    - name: Generate Variables
-      run: |
-        cd $OPENWRT_PATH
-        SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
-        echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
-        # Lấy thông tin Target sau khi đã defconfig chuẩn
-        DEVICE_TARGET=$(grep CONFIG_TARGET_BOARD .config | cut -d'"' -f2)
-        echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
-        DEVICE_SUBTARGET=$(grep CONFIG_TARGET_SUBTARGET .config | cut -d'"' -f2)
-        echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
-
 
     - name: Download DL Package
       run: |
@@ -105,6 +96,13 @@ jobs:
         make download -j8
         find dl -size -1024c -exec rm -f {} \;
 
+    - name: SSH connection to Actions
+      uses: P3TERX/ssh2actions@main
+      if: (LITE_FREE_VERSION) # Hoặc bỏ dòng if này để luôn chạy
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+        
     - name: Compile Firmware
       id: compile
       run: |
