--- a/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/IPQ60XX-6.6-WIFI(EMMC).yml
@@ -1,4 +1,3 @@
-
 name: IPQ60XX-6.6-WIFI(EMMC)
 
 on:
@@ -61,13 +60,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
-- name: Clone Source Code
+    - name: Clone Source Code
       run: |
+        df -hT $GITHUB_WORKSPACE
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         echo "OPENWRT_PATH=$PWD" >> $GITHUB_ENV
         VERSION_INFO=$(git show -s --date=short --format="作者: %an<br/>时间: %cd<br/>内容: %s<br/>hash: %H")
         echo "VERSION_INFO=$VERSION_INFO" >> $GITHUB_ENV
+
+
 
     - name: Install Feeds
       run: |
@@ -78,37 +80,38 @@ jobs:
     - name: Load Custom Configuration
       run: |
         [ -e files ] && mv files $OPENWRT_PATH/files
+        # Chép file config vào
         cp $CONFIG_FILE $OPENWRT_PATH/.config
         cd $OPENWRT_PATH
         
-        # ÉP CHỌN DEVICE VÀ TẮT EXT4
+        # ÉP CHỌN DEVICE VÀ TẮT EXT4 TRƯỚC KHI DEFCONFIG
         sed -i 's/CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_8devices_mango-dvk=y/# CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_8devices_mango-dvk is not set/' .config
         sed -i 's/# CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_jdc_ax1800-pro is not set/CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_jdc_ax1800-pro=y/' .config
         sed -i 's/CONFIG_TARGET_ROOTFS_EXT4FS=y/# CONFIG_TARGET_ROOTFS_EXT4FS is not set/' .config
         
+        # Chạy defconfig SAU KHI đã có Feeds và đã ép config
         make defconfig
-
+        
     - name: Generate Variables
       run: |
+        cp $CONFIG_FILE $OPENWRT_PATH/.config
         cd $OPENWRT_PATH
+        make defconfig > /dev/null 2>&1
         SOURCE_REPO="$(echo $REPO_URL | awk -F '/' '{print $(NF)}')"
         echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
-        # Lấy thông tin Target sau khi đã defconfig chuẩn
-        DEVICE_TARGET=$(grep CONFIG_TARGET_BOARD .config | cut -d'"' -f2)
+        DEVICE_TARGET=$(cat .config | grep CONFIG_TARGET_BOARD | awk -F '"' '{print $2}')
         echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
-        DEVICE_SUBTARGET=$(grep CONFIG_TARGET_SUBTARGET .config | cut -d'"' -f2)
+        DEVICE_SUBTARGET=$(cat .config | grep CONFIG_TARGET_SUBTARGET | awk -F '"' '{print $2}')
         echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
-
-    - name: SSH connection to Actions (Tmate)
-      uses: mxschmitt/action-tmate@v3
-      # Bạn có thể thêm if: env.SSH == 'true' nếu muốn bật tắt bằng tay
-      timeout-minutes: 30
 
     - name: Download DL Package
       run: |
         cd $OPENWRT_PATH
         make download -j8
         find dl -size -1024c -exec rm -f {} \;
+        
+
+        
 
     - name: Compile Firmware
       id: compile
