--- a/.github/workflows/3-IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/3-IPQ60XX-6.6-WIFI(EMMC).yml
@@ -8,7 +8,7 @@ on:
 env:
   REPO_URL: https://github.com/breeze303/ipq60xx-6.6.git
   REPO_BRANCH: main-nss
-  CONFIG_FILE: configs/ipq60xx-6.6-wifi(emmc).config
+  CONFIG_FILE: configs/ipq60xx-6.6-wifi(emmc)-3.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
