--- a/configs/ipq60xx-6.6-wifi(emmc)-2.config
+++ b/configs/ipq60xx-6.6-wifi(emmc)-2.config
@@ -68,7 +68,7 @@ CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="qualcommax"
 CONFIG_TARGET_SUBTARGET="ipq60xx"
-CONFIG_TARGET_PROFILE="DEVICE_jdc_ax1800-pro"
+CONFIG_TARGET_PROFILE="DEVICE_jdcloud_re-ss-01"
 CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"
 CONFIG_CPU_TYPE="cortex-a53"
@@ -84,7 +84,7 @@ CONFIG_DEFAULT_e2fsprogs=y
 CONFIG_DEFAULT_f2fsck=y
 CONFIG_DEFAULT_firewall=y
 CONFIG_DEFAULT_fstools=y
-CONFIG_DEFAULT_ipq-wifi-jdc_ax1800-pro=y
+CONFIG_DEFAULT_ipq-wifi-jdcloud_re-ss-01=y
 CONFIG_DEFAULT_iwinfo=y
 CONFIG_DEFAULT_kmod-ath11k-ahb=y
 CONFIG_DEFAULT_kmod-fs-ext4=y
