--- a/.github/workflows/2-IPQ60XX-6.6-WIFI(EMMC).yml
+++ b/.github/workflows/2-IPQ60XX-6.6-WIFI(EMMC).yml
@@ -6,8 +6,8 @@ on:
   #   - cron: 0 19 * * *
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt.git
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/breeze303/ipq60xx-6.6.git
+  REPO_BRANCH: main-nss
   CONFIG_FILE: configs/ipq60xx-6.6-wifi(emmc)-2.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
