--- a/configs/ipq60xx-6.6-wifi(emmc)-2.config
+++ b/configs/ipq60xx-6.6-wifi(emmc)-2.config
@@ -96,7 +96,7 @@ CONFIG_DEFAULT_kmod-qca-mcs=y
 CONFIG_DEFAULT_kmod-qca-nss-dp=y
 CONFIG_DEFAULT_kmod-qca-nss-drv=y
 CONFIG_DEFAULT_kmod-qca-nss-drv-pppoe=y
-CONFIG_DEFAULT_kmod-qca-nss-ecm=y
+#CONFIG_DEFAULT_kmod-qca-nss-ecm=y
 CONFIG_DEFAULT_kmod-usb-dwc3=y
 CONFIG_DEFAULT_kmod-usb-dwc3-qcom=y
 CONFIG_DEFAULT_kmod-usb3=y
@@ -2610,7 +2610,7 @@ CONFIG_PACKAGE_kmod-nss-ifb=y
 # CONFIG_PACKAGE_kmod-phy-smsc is not set
 # CONFIG_PACKAGE_kmod-phylink is not set
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
-CONFIG_PACKAGE_kmod-qca-nss-drv=y
+#CONFIG_PACKAGE_kmod-qca-nss-drv=y
 
 #
 # Configuration
